testsuite/bsc.typechecker/kind/StructDefFieldIsNum.bs
package StructDefFieldIsNum () where

struct Foo =
    bar :: 12

